# GC-Bridge-4

./: .dockerignore  .env.local  .gitignore  AGENTS.md  CLAUDE.md  COM_Aktiv_Kompendium_overview.txt  Dockerfile  FELD_25.LST  FeldListe.vbs  MICROTECH_GRAPHQL_ENDPOINT_PLAN.md  README.md  README_GRAPHQL.md  docker-compose.yml  log.md  ma.md  manage.py  pyproject.toml  rag_system_planung.md  requirements.txt  ruflo-readme-section.md  test.html  vectors.db
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
GC_Bridge_4/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ai/: admin.py  apps.py  models.py  rewrite_fields.py  tasks.py  tests.py
core/: admin.py  admin_status.py  admin_utils.py  apps.py  celery_admin.py  dashboard.py  database_backup_admin.py  live_events.py  live_events_view.py  log_reader.py  logging.py  microtech_queue_view.py  signals.py  system_status_view.py  tasks.py  test_database_backup.py  test_live_events.py  test_live_events_view.py  test_microtech_sidebar.py  test_sync_event_log.py  tests.py  unfold.py  version.py
customer/: admin.py  models.py  tasks.py  test_microtech_tax_rules.py  test_phone_transfer.py  test_tasks.py  views.py
docker/: entrypoint.sh  nginx.conf
docs/: Makefile  make.bat
documents/: admin.py  jinja2_env.py  models.py  services.py  shopware_upload_service.py  tests.py
emails/: admin.py  apps.py  mjml.py  models.py  services.py  tasks.py
emails_v2/: apps.py  catalog.py  mjml.py  models.py  signals.py  urls.py  variable_parser.py  views.py
examples/: preisimport_preiserhoehung_2025.csv  (+1 more)
(+585 files in other folders)
