[project]
name = "gc-bridge-4"
version = "0.1.0"
description = "GC-Bridge-4"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "django-unfold",
    "psycopg[binary]",
    "lib-shopware6-api-base",
    "loguru",
    "pywin32; platform_system == 'Windows'",
    "django-modeltranslation>=0.19.19",
    "requests>=2.32.5",
    "sphinx>=8.2.3",
    "uvicorn>=0.41.0",
    "whitenoise>=6.0.0",
    "django-mptt>=0.18.0",
    "beautifulsoup4>=4.14.3",
    "reportlab>=4.4.10",
    "pypdf>=6.10.2",
]
