[project]
name = "gc-bridge-4"
version = "0.1.0"
description = "GC-Bridge-4"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.0",
    "django>=6.0.2",
    "django-unfold>=0.97.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]",
    "lib-shopware6-api-base",
    "loguru",
    "django-modeltranslation>=0.19.19",
    "requests>=2.32.5",
    "sphinx>=8.2.3",
    "uvicorn>=0.41.0",
    "whitenoise>=6.0.0",
    "django-mptt>=0.18.0",
    "beautifulsoup4>=4.14.3",
    "redis>=6.0.0",
    "reportlab>=4.4.10",
    "pypdf>=6.10.2",
    "weasyprint>=61.0",
    "django-celery-beat>=2.9.0",
    "qrcode[pil]>=8.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "GC_Bridge_4.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
